--- a/embarc/adventures/templates/adventures.html
+++ b/embarc/adventures/templates/adventures.html
@@ -2,89 +2,46 @@
 {% load static %}
 {% block title %}Embarc :: Adventures{% endblock %}
 {% block content %}
-        <h1><a class="icon" href="{% url 'index' %}">🔙</a></h1>
-        <h2>Adventures <a class="icon" href="{% url 'adventure_add' %}" title="Add">➕</a></a></h2>
-        {% for adventure in adventures %}
+        <h2>Adventures <a class="icon" href="{% url 'adventure_add' %}" title="Add">➕</a></h2>
+    {% for adventure in adventures %}
         <table>
+            <thead>
                 <tr>
-                        <th>
-                                <a class="item" href="{% url 'adventure_edit' id=adventure.id %}">
-                                        <b>{{adventure.name}}</b> ({{adventure.description}})
-                                ️</a>
-                                <a
-                                        class="icon"
-                                        href="{% url 'adventure_delete' id=adventure.id %}"
-                                        onclick="return confirm('Are you sure?')"
-                                        title="Delete"
-                                >
-                                        ❌
-                                </a>
-                                <a
-                                        class="icon"
-                                        href="{% url 'mission_add' adventure_id=adventure.id %}"
-                                        title="Add mission"
-                                >
-                                        ➕️
-                                </a>
-                                <div>
-                                        <span>{{adventure.percentage}}%</span>
-                                        <progress value="{{adventure.percentage}}" max="100"></progress>
-                                </div>
-                        </th>
+                    <th>
+                        <a class="item" href="{% url 'adventure_view' id=adventure.id %}">
+                            <b>{{adventure.name}}</b>
+                        ️</a>
+                    </th>
                 </tr>
-                {% for mission in adventure.missions.all %}
+            </thead>
+            <tbody>
                 <tr>
-                        {% if not mission.parent %}
-                        <td>
-                                <a class="item" href="{% url 'mission_edit' id=mission.id %}">
-                                {% if mission.completed %}
-                                        <b class="done">{{mission.name}}</b>
-                                {% else %}
-                                        {{mission.name}}
-                                {% endif %}
-                                </a>
-                                <a
-                                        class="icon"
-                                        href="{% url 'mission_delete' id=mission.id %}"
-                                        onclick="return confirm('Are you sure?')"
-                                        title="Delete"
-                                >
-                                        ❌
-                                </a>
-                                <a
-                                        class="icon"
-                                        href="{% url 'submission_add' parent_id=mission.id adventure_id=adventure.id %}"
-                                        title="Add mission"
-                                >
-                                        ➕️
-                                </a>
-                                {% if mission.children.count > 0 %}
-                                <ul>
-                                        {% for submission in mission.children.all %}
-                                        <li>
-                                                <a class="item" href="{% url 'mission_edit' id=submission.id %}">
-                                                {% if submission.completed %}
-                                                        <b class="done">{{submission.name}}</b>
-                                                {% else %}
-                                                        {{submission.name}}
-                                                {% endif %}
-                                                </a>
-                                                <a
-                                                        class="icon"
-                                                        href="{% url 'mission_delete' id=submission.id %}"
-                                                        onclick="return confirm('Are you sure?')"
-                                                        title="Delete"
-                                                >
-                                                        ❌
-                                                </a>
-                                        </li>
-                                        {% endfor %}
-                                </ul>
-                                {% endif %}
-                        </td>
-                        {% endif %}
+                    <td class="description">{{adventure.description}}</td>
                 </tr>
-                {% endfor %}
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td class="footer">
+                        {{adventure.percentage}}%
+                        <progress value="{{adventure.percentage}}" max="100"></progress>
+                        <a
+                            class="icon"
+                            href="{% url 'adventure_edit' id=adventure.id %}"
+                            title="Edit"
+                        >
+                            ✏️
+                        </a>
+                        <a
+                            class="icon"
+                            href="{% url 'adventure_delete' id=adventure.id %}"
+                            onclick="return confirm('Are you sure?')"
+                            title="Delete"
+                        >
+                            ❌
+                        </a>
+                    </td>
+                </tr>
+            </tfoot>
         </table>
-        {% endfor %}
+    {% endfor %}
 {% endblock %}
