Completed is now a three state field

--- a/embarc/adventures/static/style.css
+++ b/embarc/adventures/static/style.css
@@ -23,6 +23,10 @@ b.done {
     color: lightseagreen;
 }
 
+b.impossible {
+    color: salmon;
+}
+
 body {
     background-color: floralwhite;
     color: cornflowerblue;
