--- a/embarc/adventures/templates/adventures.html
+++ b/embarc/adventures/templates/adventures.html
@@ -8,9 +8,7 @@
             <thead>
                 <tr>
                     <th>
-                        <a class="item" href="{% url 'adventure_view' id=adventure.id %}">
-                            <b>{{adventure.name}}</b>
-                        ️</a>
+                        <a class="item" href="{% url 'adventure_view' id=adventure.id %}"><b>{{adventure.name}}</b>️</a>
                     </th>
                 </tr>
             </thead>
