Adding random missions

--- a/embarc/adventures/templates/adventures.html
+++ b/embarc/adventures/templates/adventures.html
@@ -42,4 +42,5 @@
             </tfoot>
         </table>
     {% endfor %}
+        <a class="item" href="{% url 'mission_random' %}"><h2>Random Mission</h2></a>
 {% endblock %}
