--- a/embarc/adventures/templates/adventure_add.html
+++ b/embarc/adventures/templates/adventure_add.html
@@ -6,7 +6,7 @@
         <form method="post">
             {% csrf_token %}
             <table>
-                {{form}}
+                {{form.as_table}}
             </table>
             <button type="submit">Submit</button>
         </form>
