Fixing back button

--- a/embarc/adventures/templates/mission_add.html
+++ b/embarc/adventures/templates/mission_add.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}Embarc :: Add mission{% endblock %}
 {% block content %}
-        <h1><a class="icon" href="{% url 'adventure_view' id=adventure_id %}">🔙</a></h1>
+        <h1><a class="icon" href="javascript:history.go(-1)">🔙</a></h1>
         <h2>Add mission</h2>
         <form method="post">
             {% csrf_token %}
