--- a/embarc/adventures/templates/mission_edit.html
+++ b/embarc/adventures/templates/mission_edit.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}Embarc :: Edit mission{% endblock %}
 {% block content %}
-        <h1><a class="icon" href="{% url 'adventures' %}">🔙</a></h1>
+        <h1><a class="icon" href="javascript:history.go(-1)">🔙</a></h1>
         <h2>Edit mission</h2>
         <form method="post">
             {% csrf_token %}
