--- a/embarc/adventures/templates/base.html
+++ b/embarc/adventures/templates/base.html
@@ -7,7 +7,6 @@
         <link rel="stylesheet" href="{% static 'style.css' %}"/>
     </head>
     <body>
-        {% block content %}
-        {% endblock %}
+        {% block content %}{% endblock %}
     </body>
 </html>
