Adding a mission reset button

--- a/embarc/adventures/templates/adventure_view.html
+++ b/embarc/adventures/templates/adventure_view.html
@@ -92,6 +92,13 @@
                         >
                             ♻️
                         </a>
+                        <a
+                            class="icon"
+                            href="{% url 'mission_reset' id=mission.id %}"
+                            title="Cycle"
+                        >
+                            🏁
+                        </a>
             {% if mission.children.count > 0 %}
                         <ul class="items">
                 {% for submission in mission.children.all %}
