Adding the almost there topbar option

--- a/embarc/adventures/templates/base.html
+++ b/embarc/adventures/templates/base.html
@@ -13,6 +13,8 @@
             <a class="icon" href="{% url 'adventure_add' %}">PLAN</a></span>
             <span>|</span>
             <a class="icon" href="{% url 'mission_random' %}">RANDOM</a></span>
+            <span>|</span>
+            <a class="icon" href="{% url 'almost_there' %}">ALMOST THERE</a></span>
         </div>
         {% block content %}{% endblock %}
     </body>
