Adding the last modified menu item

--- a/embarc/adventures/templates/base.html
+++ b/embarc/adventures/templates/base.html
@@ -15,6 +15,8 @@
             <a class="icon" href="{% url 'mission_random' %}">RANDOM</a></span>
             <span>|</span>
             <a class="icon" href="{% url 'almost_there' %}">ALMOST THERE</a></span>
+            <span>|</span>
+            <a class="icon" href="{% url 'last_modified' %}">LAST MODIFIED</a></span>
         </div>
         {% block content %}{% endblock %}
     </body>
